# resourceschedule_ffrt

./: .clang-format  .gitignore  .markdownlint.json  BUILD.gn  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.en.md  README.md  RELEASE-NOTES.md  TESTING.md  bundle.json  cspell.json  ffrt.gni  ffrt_io_task_scheuduler.gni  ffrt_stackless_coroutine.gni  ffrt_whitelist.conf  hisysevent.yaml  log_ctr_whitelist.conf  use_io_old.gni  use_rust_old.gni  worker_monitor.conf
benchmarks/: CMakeLists.txt  base.csv  benchmarks.sh  common.h  plot.py
benchmarks/airaw/: airaw.cpp
benchmarks/base/: base.cpp
benchmarks/face_story/: face_story.cpp
benchmarks/fib/: fib.cpp
benchmarks/fork_join/: fork_join.cpp
benchmarks/serial_sched_time/: CMakeLists.txt  base.csv  plot.py  run_sched_time_test.sh  serial_sched_time.cpp
benchmarks/speedup/: CMakeLists.txt  base.csv  plot.py  run_speedup_test.sh  speedup.cpp
examples/: BUILD.gn  CMakeLists.txt  submit.cpp
src/: CMakeLists.txt
src/core/: dependence_manager.h  entity.cpp  entity.h  loop_api.cpp  poller_api.cpp  resource_manager.cpp  task.cpp  task_attr_private.h  task_ctx.cpp  task_ctx.h  task_io.cpp  task_io.h  task_rust.cpp  task_rust.h  task_wrapper.h  timer_api.cpp  version_ctx.cpp  version_ctx.h  xpu_task.cpp
src/dfx/async_stack/: ffrt_async_stack.cpp  ffrt_async_stack.h
src/dfx/bbox/: bbox.cpp  bbox.h  dfx_allocator.cpp  dfx_allocator.h  fault_logger_fd_manager.cpp  fault_logger_fd_manager.h
src/dfx/dump/: dump.cpp  dump.h
src/dfx/log/: ffrt_log.cpp  ffrt_log_api.h  log_base.h
src/dfx/perf/: ffrt_perf.h
src/dfx/sysevent/: sysevent.cpp  sysevent.h
src/dfx/trace/: ffrt_trace.cpp  ffrt_trace.h  ffrt_trace_chain.cpp  ffrt_trace_chain.h
src/dfx/trace_record/: ffrt_trace_record.cpp  ffrt_trace_record.h
src/dfx/watchdog/: watchdog.cpp  watchdog_util.cpp  watchdog_util.h
src/dm/: dependence_manager.cpp  dependence_manager.h  sdependence_manager.cpp  sdependence_manager.h
src/eu/: base_poller.cpp  base_poller.h  blockaware.h  co2_context.c  co2_context.h  co_routine.cpp  co_routine.h  co_routine_factory.cpp  cpu_manager_interface.h  cpu_manager_strategy.cpp  cpu_manager_strategy.h  cpu_monitor.cpp  cpu_monitor.h  cpu_worker.cpp  cpu_worker.h  cpuworker_manager.cpp  cpuworker_manager.h  execute_unit.cpp  execute_unit.h  func_manager.h  io_poller.cpp  io_poller.h  loop.cpp  loop.h  loop_api.cpp  loop_poller.cpp  loop_poller.h  osattr_manager.cpp  osattr_manager.h  qos_config.cpp  qos_config.h  qos_convert.cpp  qos_interface.cpp  qos_interface.h  qos_policy.cpp  qos_policy.h  rtg_ioctl.cpp  rtg_ioctl.h  rtg_perf_ctrl.c  rtg_perf_ctrl.cpp  (+14 more)
src/flo/: ffrt_flo.cpp  ffrt_ohos.h  flo_ohos.h
src/internal_inc/: assert.h  config.h  non_copyable.h  osal.cpp  osal.h  types.h
src/ipc/: ipc.cpp
src/queue/: base_queue.cpp  base_queue.h  concurrent_queue.cpp  concurrent_queue.h  eventhandler_adapter_queue.cpp  eventhandler_adapter_queue.h  eventhandler_interactive_queue.cpp  eventhandler_interactive_queue.h  ihandler.h  itask.h  queue.cpp  queue.h  queue_api.cpp  queue_attr_private.h  queue_handler.cpp  queue_handler.h  queue_monitor.cpp  queue_monitor.h  queue_strategy.h  serial_handler.cpp  serial_handler.h  serial_looper.cpp  serial_looper.h  serial_queue.cpp  serial_queue.h  serial_queue_api.cpp  serial_task.cpp  serial_task.h  traffic_record.cpp  traffic_record.h
src/sched/: deadline.cpp  execute_ctx.cpp  execute_ctx.h  frame_interval.cpp  frame_interval.h  interval.cpp  interval.h  load_predictor.h  load_tracking.cpp  load_tracking.h  multi_workgroup.cpp  qos.cpp  qos.h  sched_deadline.cpp  sched_deadline.h  scheduler.cpp  scheduler.h  stask_scheduler.cpp  stask_scheduler.h  task_client_adapter.h  task_manager.cpp  task_manager.h  task_runqueue.h  task_scheduler.cpp  task_scheduler.h  task_state.cpp  task_state.h  workgroup_internal.h
src/sched/hmos/: qos.h
src/staging_qos/sched/: qos_register_impl.cpp  qos_register_impl.h
src/sync/: condition_variable.cpp  delayed_worker.cpp  delayed_worker.h  io_poller.cpp  io_poller.h  mutex.cpp  mutex_perf.cpp  mutex_perf.h  mutex_private.h  perf_counter.cpp  perf_counter.h  poller.cpp  poller.h  poller_api.cpp  record_mutex.cpp  record_mutex.h  semaphore.h  shared_mutex.cpp  shared_mutex_private.h  sleep.cpp  sync.cpp  sync.h  thread.cpp  timer_api.cpp  timer_manager.cpp  timer_manager.h  wait_queue.cpp  wait_queue.h
src/tm/: cpu_task.cpp  cpu_task.h  io_task.cpp  io_task.h  queue_task.cpp  queue_task.h  scpu_task.cpp  scpu_task.h  task_base.cpp  task_base.h  task_factory.cpp  task_factory.h  uv_task.cpp  uv_task.h  xpueu_task.cpp  xpueu_task.h  xputask_factory.cpp  xputask_factory.h
src/util/: IntrusiveList.h  capability.cpp  capability.h  cb_func.h  common_const.h  cpu_boost_ohos.h  cpu_boost_wrapper.cpp  cpu_boost_wrapper.h  event_handler_adapter.h  ffrt_cpu_boost.cpp  ffrt_facade.cpp  ffrt_facade.h  ffrt_ring_buffer.h  graph_check.cpp  graph_check.h  init.cpp  linked_list.h  name_manager.h  pthread_internal.h  ref_function_header.h  sched_ext.h  singleton_register.h  slab.h  spmc_queue.cpp  spmc_queue.h  task_deleter.cpp  task_deleter.h  time_format.cpp  time_format.h  token.h  ts_list.h  white_list.cpp  white_list.h  worker_monitor.cpp  worker_monitor.h
src/util/linux/: capability.cpp
test/: CMakeLists.txt
test/testfunc/: func_pool.cpp  func_pool.h  util.cpp  util.h
test/ut/: BUILD.gn  CMakeLists.txt  common.h  cpu_monitor_test.cpp  cpu_worker_test.cpp  cpuworker_manager_test.cpp  deadline_test.cpp  execute_unit_test.cpp  frame_interval_test.cpp  inherit_test.cpp  main.cpp  multi_workgroup_test.cpp  qos_convert_test.cpp  qos_interface_test.cpp  task_ctx_test.cpp  ut_core_test.cpp  ut_coroutine.cpp  ut_coroutine_test.cpp  ut_csync.cpp  ut_deadline.cpp  ut_dependency.cpp  ut_execute_unit.cpp  ut_ffrt_io_test.cpp  ut_graphCheck.cpp  ut_interval.cpp  ut_loop_test.cpp  ut_mem.cpp  ut_queue_test.cpp  ut_rtg.cpp  ut_thread.cpp  worker_manager_test.cpp  worker_thread_test.cpp
test/ut/testcase/: delay_work_deinit_test.cpp  inherit_test.cpp  ut_core.cpp  (+32 more)
(+145 files in other folders)
